# High_Performance_Computing_Model_For_2D_DFT

./: CMakeLists.txt  readme.md
p31/src/: complex.h  main.cc
p32/: main.cc
p32/src/: complex.cc
p33/: complex.cc  complex.h  main.cu
p34/src/: complex.cc  input_image.cc  main.cc
